# auto-phd

./: .env.example  .gitignore  README.md  package-lock.json  package.json
autogen_service/: README.md  __init__.py  pyproject.toml
autogen_service/app/: __init__.py  main.py  model_client.py  pipeline.py  schemas.py
autogen_service/app/tools/: __init__.py  academic_api.py  image_context.py  web_context.py
autogen_service/app/utils/: __init__.py  pdf_parse.py
public/: app.js  index.html  styles.css
scripts/: dev.mjs
server/: index.ts  orchestrator.ts  types.ts
server/agents/: cv-parser.ts  cv-recommender.ts  email-writer.ts  fit-analyzer.ts  motivation-writer.ts  paper-selector.ts  professor-researcher.ts  proposal-writer.ts
server/tools/: academic-api.ts  browser.ts  gemini.ts  pdf.ts
